jdk17 and tzatziki migration (#26)